лінки фіксед не вірно доцілої ст

--- a/index.html
+++ b/index.html
@@ -47,62 +47,68 @@
               </li>
             </ul>
           </nav>
+          <div class="laaaaa">
+            <ul class="header-contact list">
+              <li class="header-contact__item--mail">
+                <a
+                  class="header-contact__link--mail link"
+                  href="mailto:info@devstudio.com"
+                >
+                  <svg class="header-contact__icon--mail">
+                    <use
+                      href="./images/maine/sprite.svg#icon-hat-envelopehover"
+                    ></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="header-contact__item--tel">
+                <a
+                  class="header-contact__link--tel link"
+                  href="tel:+380961111111"
+                >
+                  <svg class="header-contact__icon--tel">
+                    <use
+                      href="./images/maine/sprite.svg#icon-hat-smartphone"
+                    ></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
 
-          <ul class="header-contact list">
-            <li class="header-contact__item--mail">
-              <a
-                class="header-contact__link--mail link"
-                href="mailto:info@devstudio.com"
-              >
-                <svg class="header-contact__icon--mail">
-                  <use
-                    href="./images/maine/sprite.svg#icon-hat-envelopehover"
-                  ></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li class="header-contact__item--tel">
-              <a
-                class="header-contact__link--tel link"
-                href="tel:+380961111111"
-              >
-                <svg class="header-contact__icon--tel">
-                  <use
-                    href="./images/maine/sprite.svg#icon-hat-smartphone"
-                  ></use>
-                </svg>
-                +38 096 111 11 11
-              </a>
-            </li>
-          </ul>
+            <ul class="mobile-menu-soclink-list list">
+              <li class="mobile-menu-soclink-list-item item">
+                <a href="" class="mobile-menu-soclink-link link" target="blank">
+                  Instagram
+                </a>
+              </li>
+              <li class="mobile-menu-soclink-list-item item">
+                <a href="" class="mobile-menu-soclink-link link" target="blank">
+                  Twitter
+                </a>
+              </li>
+              <li class="mobile-menu-soclink-list-item item">
+                <a
+                  href="./"
+                  class="mobile-menu-soclink-link link"
+                  target="blank"
+                >
+                  Facebook
+                </a>
+              </li>
+              <li class="mobile-menu-soclink-list-item item">
+                <a
+                  href="./"
+                  class="mobile-menu-soclink-link mobile-menu-soclink-link--Linkedin link"
+                  target="blank"
+                >
+                  Linkedin
+                </a>
+              </li>
+            </ul>
+          </div>
 
-          <ul class="mobile-menu-soclink-list list">
-            <li class="mobile-menu-soclink-list-item item">
-              <a href="" class="mobile-menu-soclink-link link" target="blank">
-                Instagram
-              </a>
-            </li>
-            <li class="mobile-menu-soclink-list-item item">
-              <a href="" class="mobile-menu-soclink-link link" target="blank">
-                Twitter
-              </a>
-            </li>
-            <li class="mobile-menu-soclink-list-item item">
-              <a href="./" class="mobile-menu-soclink-link link" target="blank">
-                Facebook
-              </a>
-            </li>
-            <li class="mobile-menu-soclink-list-item item">
-              <a
-                href="./"
-                class="mobile-menu-soclink-link mobile-menu-soclink-link--Linkedin link"
-                target="blank"
-              >
-                Linkedin
-              </a>
-            </li>
-          </ul>
           <button type="button" class="mobile-menu-btn-close" data-menu-close>
             <svg class="icon-cross" width="40" height="40">
               <use href="./images/maine/sprite.svg#icon-close "></use>
